Update ghost post, default templates and styles
Update ghost post, default templates and styles #4

--- a/src/blog/content/themes/carloscuesta/default.hbs
+++ b/src/blog/content/themes/carloscuesta/default.hbs
@@ -31,7 +31,7 @@
 		</h3>
 	    <div class="social">
 	        <a href="https://twitter.com/crloscuesta">
-	            <svg class="icon icon-linkedin">
+	            <svg class="icon icon-twitter">
 	                <use xlink:href="#icon-twitter"></use>
 	            </svg>
 	        </a>
