--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -129,6 +129,10 @@ header.tag-head.css, .tags .tag-css {
 	background-color:#128EF2;
 }
 
+.hidden {
+	display: none;
+}
+
 article h2 a {
 	color: #1a1a1a;
 }
@@ -182,7 +186,7 @@ article a.read-more:hover {
 	border-bottom-right-radius: 2px;
 }
 
-.author a {
+.post-meta .author a {
 	color: #2196F3;
 	text-transform: uppercase;
 	font-size: .76em;
@@ -334,7 +338,7 @@ header.tag-head {
 	fill: #9EABB3;
 }
 
-.author-meta {
+.author-template .author-meta {
 	margin: 0 0 2em 0;
 	color: #9EABB3;
 }
@@ -374,11 +378,50 @@ header.tag-head {
 	color:#2f3335;
 }
 
-.post-content {
+.post-content, .post-footer {
 	padding-top: 1.5em;
 	padding-bottom: 1.5em;
 	border-bottom: 1px solid #eee;
+}
+
+.disqus-comments {
+	padding-top: 1.5em;
+	padding-bottom: 1.5em;
+}
+
+.post-content a {
+	color: #2196F3;
+}
+
+.post-content {
 	font-size: 1.15em;
+}
+
+.post-footer {
+	padding-bottom: .65em;
+	color: #9EABB3;
+	font-size: 14px;
+}
+
+.post-footer h3, .post-footer .author a {
+	color: #1a1a1a;
+}
+
+.post-footer .author a:hover {
+	color: #2196F3;
+}
+
+.post-template .post {
+	border: none;
+}
+
+.post .icon {
+	width: 1.5em;
+	height: 1.5em;
+}
+
+.share h3 {
+	margin-bottom: 1.65em;
 }
 
 /* END POST */
@@ -416,7 +459,7 @@ header.tag-head {
 		padding: 2em;
 	}
 
-	article footer {
+	article footer.post-meta {
 		display: none!important;
 	}
 
@@ -428,6 +471,11 @@ header.tag-head {
 		display: block;
 		padding: 0;
 	}
+
+	.share h3 {
+		margin-bottom: .75em;
+	}
+
 }
 
 /* END MEDIA QUERIES GENERAL */
