--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -75,7 +75,7 @@
 </div>
 <aside class="read-next">
     {{#next_post}}
-    <a class="read-next-story prev center-xs {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+    <a class="read-next-story next center-xs" href="{{url}}">
         <section class="post">
             <h2>{{title}}</h2>
             <p>{{excerpt words="19"}}&hellip;</p>
@@ -83,7 +83,7 @@
     </a>
     {{/next_post}}
     {{#prev_post}}
-    <a class="read-next-story center-xs {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+    <a class="read-next-story prev center-xs" href="{{url}}">
         <section class="post">
             <h2>{{title}}</h2>
             <p>{{excerpt words="19"}}&hellip;</p>
