Update styles and templates
Updated styles, added nav to blog, updated templates and styles.

--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -12,3 +12,4 @@ footer.center-xs
                 use(xlink:href="#icon-linkedin")
 script.
     console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttp://github.com/carloscuesta\nhttp://twitter.com/crloscuesta', 'font-size:16px;color:#455A64', 'font-size:16px;color:#EC407A', 'font-size:16px;color:#455A64', 'font-size:16px;color:#455A64; font-weight:bold;', 'color:#EC407A');
+    window.addEventListener('error', function(e) {_gaq.push(['_trackEvent','JavaScript Error',e.message,e.filename + ':  ' + e.lineno,true]);});
