--- a/src/blog/content/themes/carloscuesta/default.hbs
+++ b/src/blog/content/themes/carloscuesta/default.hbs
@@ -8,14 +8,38 @@
     {{! Page Meta }}
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
-
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:description" content="{{meta_description}}" />
+    <meta name="og:image" content="http://carloscuesta.me/carloscuesta.jpeg" />
+   	<meta name="twitter:image:src" content="http://carloscuesta.me/carloscuesta.jpeg" />
+   	<meta name="twitter:creator" content="@crloscuessta" />
+   	<meta name="twitter:url" content="http://carloscuesta.me/blog" />
+   	<meta name="twitter:title" content="{{meta_title}}" />
+	<link rel="apple-touch-icon" sizes="57x57" href="http://carloscuesta.me/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="http://carloscuesta.me/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="http://carloscuesta.me/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="http://carloscuesta.me/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="http://carloscuesta.me/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="http://carloscuesta.me/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="http://carloscuesta.me/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="http://carloscuesta.me/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="http://carloscuesta.me/apple-icon-180x180.png">
+	<link rel="apple-touch-icon" sizes="192x192" href="http://carloscuesta.me/apple-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="http://carloscuesta.me/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="http://carloscuesta.me/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="http://carloscuesta.me/favicon-16x16.png">
+	<link rel="manifest" href="http://carloscuesta.me/manifest.json">
+	<meta name="msapplication-TileColor" content="#2196F3" />
+	<meta name="msapplication-TileImage" content="http://carloscuesta.me/ms-icon-144x144.png" />
+	<meta name="theme-color" content="#2196F3" />
+
 
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
     <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}" />
-    <style>code[class*="language-"],pre[class*="language-"] {color: black;text-shadow: 0 1px white;font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;direction: ltr;text-align: left;white-space: pre;word-spacing: normal;word-break: normal;word-wrap: normal;line-height: 1.5;-moz-tab-size: 4;-o-tab-size: 4;tab-size: 4;-webkit-hyphens: none;-moz-hyphens: none;-ms-hyphens: none;hyphens: none;}pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {text-shadow: none;background: #b3d4fc;}pre[class*="language-"]::selection, pre[class*="language-"] ::selection,code[class*="language-"]::selection, code[class*="language-"] ::selection {text-shadow: none;background: #b3d4fc;}@media print {code[class*="language-"],pre[class*="language-"] {text-shadow: none;}}pre[class*="language-"] {padding: 1em;margin: .5em 0;overflow: auto;}:not(pre) > code[class*="language-"],pre[class*="language-"] {background: #f5f5f5;}:not(pre) > code[class*="language-"] {padding: .1em;border-radius: .3em;white-space: normal;}.token.comment,.token.prolog,.token.doctype,.token.cdata {color: slategray;}.token.punctuation {color: #999;}.namespace {opacity: .7;}.token.property,.token.tag,.token.boolean,.token.number,.token.constant,.token.symbol,.token.deleted {color: #905;}.token.selector,.token.attr-name,.token.string,.token.char,.token.builtin,.token.inserted {color: #690;}.token.operator,.token.entity,.token.url,.language-css .token.string,.style .token.string {color: #a67f59;background: hsla(0, 0%, 100%, .5);}.token.atrule,.token.attr-value,.token.keyword {color: #07a;}.token.function {color: #DD4A68;}.token.regex,.token.important,.token.variable {color: #e90;}.token.important,.token.bold {font-weight: bold;}.token.italic {font-style: italic;.token.entity {cursor: help;}</style>
+    <style>code[class*="language-"],pre[class*="language-"] {color: black;text-shadow: 0 1px white;font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;direction: ltr;text-align: left;white-space: pre;word-spacing: normal;word-break: normal;word-wrap: normal;line-height: 1.5;-moz-tab-size: 4;-o-tab-size: 4;tab-size: 4;-webkit-hyphens: none;-moz-hyphens: none;-ms-hyphens: none;hyphens: none;}pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {text-shadow: none;background: #b3d4fc;}pre[class*="language-"]::selection, pre[class*="language-"] ::selection,code[class*="language-"]::selection, code[class*="language-"] ::selection {text-shadow: none;background: #b3d4fc;}@media print {code[class*="language-"],pre[class*="language-"] {text-shadow: none;}}pre[class*="language-"] {padding: 1em;margin: .5em 0;overflow: auto;}:not(pre) > code[class*="language-"],pre[class*="language-"] {background: #f5f5f5;}:not(pre) > code[class*="language-"] {padding: .1em;border-radius: .3em;white-space: normal;}.token.comment,.token.prolog,.token.doctype,.token.cdata {color: slategray;}.token.punctuation {color: #999;}.namespace {opacity: .7;}.token.property,.token.tag,.token.boolean,.token.number,.token.constant,.token.symbol,.token.deleted {color: #905;}.token.selector,.token.attr-name,.token.string,.token.char,.token.builtin,.token.inserted {color: #690;}.token.operator,.token.entity,.token.url,.language-css .token.string,.style .token.string {color: #a67f59;background: hsla(0, 0%, 100%, .5);}.token.atrule,.token.attr-value,.token.keyword {color: #07a;}.token.function {color: #DD4A68;}.token.regex,.token.important,.token.variable {color: #e90;}.token.important,.token.bold {font-weight: bold;}.token.italic {font-style: italic;.token.entity {cursor: help;}</style>
     {{ghost_head}}
 </head>
 <body class="{{body_class}} nav-closed">
