--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -1,8 +1,14 @@
 section.twitter
     .wrap
         .row
-            .col-xs-12.title
+            .col-xs-12.col-sm-9.title
                 h1 I'm #[a(href='https://twitter.com/crloscuesta') @crloscuesta] on twitter.
+            .col-xs-12.col-sm-3.end-sm.follow-me
+                a(href="https://twitter.com/intent/follow?screen_name=crloscuesta", target="_blank").follow-btn
+                    span.twitter.end-xs
+                        svg.icon.icon-twitter
+                            use(xlink:href="#icon-twitter")
+                        span Follow @crloscuesta
             -each tweet in twitterData
                 article.tweet.col-xs-12.col-sm-6
                     h5 !{tweet.text}
