Update styles, fix visual bugs
Update styles, renamed button to menu, fixed follow me buttons visual
bugs.

--- a/src/app/styles/_partials/_menu.scss
+++ b/src/app/styles/_partials/_menu.scss
@@ -102,6 +102,7 @@
     right: 0;
     display: none;
     z-index: 1;
+    transition: all 2s linear;
 }
 
 .modal__content {
@@ -109,12 +110,14 @@
     height: 300px;
     width: 200px;
     margin: 20px auto;
+    transition: all 2s linear;
 }
 
 .c-hamburger__input:checked ~ .modal {
     opacity: 1;
     display: initial;
     background-color: rgba(0, 0, 0, 0.9);
+    transition: all 2s linear;
 }
 
 input#hamburger-menu {
