--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -2,7 +2,7 @@
 @import './_partials/_defaults.scss';
 @import './_partials/_flexbox.scss';
 @import './_partials/_mixins.scss';
-@import './_partials/_button.scss';
+@import './_partials/_menu.scss';
 
 .wrap {
 	max-width: 1140px;
@@ -318,7 +318,7 @@ section h1{
 	margin-top: .5em;
 }
 
-@media(max-width: 768px) {
+@media (max-width: 768px) {
 	header.site-header {
 		padding: 5em 1.5em 5em 1.5em;
 	}
@@ -339,13 +339,15 @@ section h1{
 	.col-xs-12.title {
 		padding: 0;
 	}
+}
 
+@media(max-width: 767px) {
 	.follow-me {
 		padding: .5em 1.5em;
 	}
 }
 
-@media(max-width: 468px) {
+@media (max-width: 468px) {
 	section h1, .tweet, .repo, .post {
 		padding: 0!important;
 	}
