--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -1,9 +1,9 @@
 section.twitter
     .wrap
         .row
-            .col-xs-12.col-sm-9.title
+            .col-xs-12.col-sm-8.col-md-9.title
                 h1 I'm #[a(href='https://twitter.com/crloscuesta') @crloscuesta] on twitter.
-            .col-xs-12.col-sm-3.end-sm.follow-me
+            .col-xs-12.col-sm-4.col-md-3.end-sm.follow-me
                 a(href="https://twitter.com/intent/follow?screen_name=crloscuesta", target="_blank").follow-btn
                     span.twitter.end-xs
                         svg.icon.icon-twitter
