--- a/src/app/styles/_partials/_menu.scss
+++ b/src/app/styles/_partials/_menu.scss
@@ -100,9 +100,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    display: none;
     z-index: 1;
-    transition: all 2s linear;
+    transition: all .2s ease-in-out;
 }
 
 .modal__content {
@@ -110,14 +109,30 @@
     height: 300px;
     width: 200px;
     margin: 20px auto;
-    transition: all 2s linear;
 }
 
 .c-hamburger__input:checked ~ .modal {
     opacity: 1;
-    display: initial;
     background-color: rgba(0, 0, 0, 0.9);
-    transition: all 2s linear;
+
+    .item {
+
+    	a {
+    		transform: scale(1);
+    	}
+
+    	&:nth-child(1) a {
+    		transition-delay: 0;
+    	}
+
+    	&:nth-child(2) a {
+    		transition-delay: 0.025s;
+    	}
+
+    	&:nth-child(3) a {
+    		transition-delay: 0.075s;
+    	}
+    }
 }
 
 input#hamburger-menu {
