--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -52,9 +52,14 @@ a {
 
 .navigation {
     position: absolute;
-	left: 0%;
-	width: 100%;
-	top: 40%;
+    left: 0%;
+    width: 100%;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateY(-50%);
 }
 
 nav.nav ul, li {
@@ -62,19 +67,37 @@ nav.nav ul, li {
 	padding: 0;
 }
 
+
 nav.nav .item {
-	text-transform: capitalize;
-	font-size: 3em;
-	list-style: none;
-	font-weight: 400;
+    text-transform: capitalize;
+    font-size: 3em;
+    list-style: none;
+    font-weight: 400;
+    transition: all .2s ease-in-out
+}
+
+nav.nav .item a {
+    display: block;
+    height: 100px;
+    line-height: 100px;
+    transition: all 400ms cubic-bezier(0.17, 0.67, 0.38, 1.46);
+    transform: scale(0.3)
+}
+
+nav.nav .item:hover a {
+    color: #ECEFF1 !important
+}
+
+nav.nav .item:hover {
+    background-color: #2196F3
 }
 
 .nav a {
-	color: #ffffff;
+	color: #2196F3;
 }
 
 .nav a:hover {
-	color: #2196F3;
+	color: #ffffff;
 }
 
 nav h3 {
@@ -848,7 +871,6 @@ iframe, .fluid-width-video-wrapper {
 	}
 }
 
-
 .c-hamburger {
     display: block;
     position: fixed;
@@ -864,7 +886,7 @@ iframe, .fluid-width-video-wrapper {
     border-radius: none;
     border: none;
     cursor: pointer;
-    transition: background 0.3s;
+    transition: background 0.2s;
     z-index: 10
 }
 
@@ -907,13 +929,13 @@ iframe, .fluid-width-video-wrapper {
 }
 
 .c-hamburger--htx span {
-    transition: background 0s 0.3s
+    transition: background 0s 0.2s
 }
 
 .c-hamburger--htx span::before,
 .c-hamburger--htx span::after {
-    transition-duration: 0.3s, 0.3s;
-    transition-delay: 0.3s, 0s
+    transition-duration: 0.2s, 0.2s;
+    transition-delay: 0.2s, 0s
 }
 
 .c-hamburger--htx span::before {
@@ -940,7 +962,7 @@ iframe, .fluid-width-video-wrapper {
 
 .c-hamburger__input:checked+.c-hamburger--htx span::before,
 .c-hamburger__input:checked+.c-hamburger--htx span::after {
-    transition-delay: 0s, 0.3s
+    transition-delay: 0s, 0.2s
 }
 
 .modal {
@@ -951,8 +973,8 @@ iframe, .fluid-width-video-wrapper {
     bottom: 0;
     left: 0;
     right: 0;
-    display: none;
-    z-index: 1
+    z-index: 1;
+    transition: all .2s ease-in-out
 }
 
 .modal__content {
@@ -964,12 +986,25 @@ iframe, .fluid-width-video-wrapper {
 
 .c-hamburger__input:checked ~ .modal {
     opacity: 1;
-    display: initial;
     background-color: rgba(0, 0, 0, 0.9)
+}
+
+.c-hamburger__input:checked ~ .modal .item a {
+    transform: scale(1)
+}
+
+.c-hamburger__input:checked ~ .modal .item:nth-child(1) a {
+    transition-delay: 0
+}
+
+.c-hamburger__input:checked ~ .modal .item:nth-child(2) a {
+    transition-delay: 0.025s
+}
+
+.c-hamburger__input:checked ~ .modal .item:nth-child(3) a {
+    transition-delay: 0.075s
 }
 
 input#hamburger-menu {
     display: none
 }
-
-/* END MEDIA QUERIES GENERAL */
